--- a/edf/win.edf.csproj
+++ b/edf/win.edf.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8490B4DF-38D4-4AA0-8CF7-D4AAA3121379}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SubReal.EasyDublicateFinder</RootNamespace>
-    <AssemblyName>SubReal.EasyDublicateFinder</AssemblyName>
+    <RootNamespace>SubReal.EasyDuplicateFinder</RootNamespace>
+    <AssemblyName>SubReal.EasyDuplicateFinder</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
