some cleaning; Part class isn't used

--- a/edf/win.edf.csproj
+++ b/edf/win.edf.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FindForm.Designer.cs">
       <DependentUpon>FindForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NotUsed\Part.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FindForm.resx">
