--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ packages/NUnit.Mocks.2.6.4/
 packages/
 win.edf.UnitTests/bin/
 win.edf.UnitTests/obj/
+SubReal.EasyDuplicateFinder.Localization/bin/Release/Languages/en/Y.png
+SubReal.EasyDuplicateFinder.Localization/bin/Release/Languages/ru/Ы.png
+SubReal.EasyDuplicateFinder.Localization/Languages/en/Y.png
+SubReal.EasyDuplicateFinder.Localization/Languages/ru/Ы.png
+SubReal.EasyDuplicateFinder.Localization/obj/Release/win.edf.Localization.csproj.FileListAbsolute.txt
