--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ SubReal.EasyDuplicateFinder.Localization/bin/Release/Languages/ru/Ы.png
 SubReal.EasyDuplicateFinder.Localization/Languages/en/Y.png
 SubReal.EasyDuplicateFinder.Localization/Languages/ru/Ы.png
 SubReal.EasyDuplicateFinder.Localization/obj/Release/win.edf.Localization.csproj.FileListAbsolute.txt
+.idea/
