add function delete check files

--- a/edf/win.edf.csproj
+++ b/edf/win.edf.csproj
@@ -158,6 +158,9 @@
     <None Include="img\edf2-app.ico" />
     <None Include="img\edf2.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
