--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ SubReal.EasyDuplicateFinder.Localization/Languages/en/Y.png
 SubReal.EasyDuplicateFinder.Localization/Languages/ru/Ы.png
 SubReal.EasyDuplicateFinder.Localization/obj/Release/win.edf.Localization.csproj.FileListAbsolute.txt
 .idea/
+edf/publish/
